--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                              
+6:48 AM 1/25/2022	CO	Corrected 2021 W-3
  6:40 01/22/2022	CO	5.75216  
 6:16 AM 1/25/2022	CO	1099-NEC - corrected default margins and added Default button 
 6:02 01/22/2022	CO	5.75215   
