--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                                   
+7:24 AM 1/26/2022	CO	Print 1099-Misc alignment updated.  Print W-2 Forms margins screen now ask for W-3 margins also
 18:25 01/22/2022	CO	5.75221  
 6:24 PM 1/25/2022	CO	adjust 1099 misc and nec 
 16:38 01/22/2022	CO	5.75220   
