update release notes

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                                          
+9:57 AM 2/4/2022	UB	Fixed Print Transactions Bug 
 16:09 01/22/2022	CO	5.75228  
 4:01 PM 1/31/2022	GL	Enter Transactions - Add Adjustments now allows for Many to One relationships, and new quick Add buttons with simple hot keys added to main screen 
 12:04 01/22/2022	CO	5.75227   
