Labels - a variety of fixes and minor enhanments includiong always filter inactive customers except if selected individually

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                                                  
+11:05 AM 3/10/2022	UB	Labels - a variety of fixes and minor enhanments includiong always filter inactive customers except if selected individually
 12:35 03/22/2022	CO	5.75236  
 12:17 03/22/2022	CO	5.75235   
 12:17 PM 3/1/2022	CO	Enter Transactions - Adjusments - fixed saving issues  
