added new quick company selection button to the Main Menu and also overhauled Transactions Journal and implemented new sorting for it (well, just re-aligned the primary sorted field)

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,7 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                                                    
+11:17 AM 4/17/2022	GL	Transaction Journals improved with new Reference Number sorting and screen selection memory
+11:16 AM 4/17/2022	CO	Added Company button to menu to quickly take you to select a different company
  6:27 04/22/2022	CO	5.75238  
 11:08 03/22/2022	CO	5.75237   
 11:05 AM 3/10/2022	UB	Labels - a variety of fixes and minor enhanments includiong always filter inactive customers except if selected individually  
