--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                                                     
+3:02 PM 4/17/2022	GL	Seperated Chart of Accounts with Financial Statement Reference Numbers into its own menu option so it can have different page settings than Chart of Accounts
 13:17 04/22/2022	CO	5.75239  
 11:17 AM 4/17/2022	GL	Transaction Journals improved with new Reference Number sorting and screen selection memory 
 11:16 AM 4/17/2022	CO	Added Company button to menu to quickly take you to select a different company 
