error logging will now be saved with company data

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                                                      
+10:59 AM 5/3/2022	CO	Moved Error Log into company data (formerly in temp)
 12:39 04/22/2022	CO	5.75240  
 3:02 PM 4/17/2022	GL	Seperated Chart of Accounts with Financial Statement Reference Numbers into its own menu option so it can have different page settings than Chart of Accounts 
 13:17 04/22/2022	CO	5.75239   
