fix trans edit receipt button

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                                                         
+2:09 PM 5/6/2022	CL	Transaction - fixed Receipt Type Button when editing trans type 2
  9:45 05/22/2022	CO	5.75243  
 9:43 05/22/2022	CO	5.75242   
 11:03 05/22/2022	CO	5.75241    
