fix err in cl post to gl holding file

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                               1:12 PM 6/15/2022	PR	2022 1099 misc and nec pdfs and changes                                                  
+11:00 AM 6/20/2022	CL	Fixed an error when posting to GL holding files
 13:13 06/22/2022	CO	5.75246  
 1:30 PM 6/14/2022	UB	Update one client's printing description for service              
 13:31 06/22/2022	CO	5.75245   
