--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                               1:12 PM 6/15/2022	PR	2022 1099 misc and nec pdfs and changes                                                    
+9:57 AM 8/12/2022	CO	Fixed a menu issue that caused some items not to apear toward end of some menus
 10:19 07/22/2022	CO	5.75248  
 11:02 06/22/2022	CO	5.75247   
 11:00 AM 6/20/2022	CL	Fixed an error when posting to GL holding files  
