changed the balance sheet headings custom for billings

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                               1:12 PM 6/15/2022	PR	2022 1099 misc and nec pdfs and changes                                                     
+10:40 AM 9/9/2022	GL	Added static default "Income and Expense Statement" heading to Balance Sheet for client 440
  9:58 08/22/2022	CO	5.75249  
 9:57 AM 8/12/2022	CO	Fixed a menu issue that caused some items not to apear toward end of some menus 
 10:19 07/22/2022	CO	5.75248   
