fix non-budget collection issue

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                               1:12 PM 6/15/2022	PR	2022 1099 misc and nec pdfs and changes                                                           
+10:42 AM 10/14/2022	UB	Collections - fixed issue with Budget logic showing up on non budget customers
 10:13 10/22/2022	CO	5.75256  
 10:08 AM 10/12/2022	CO	Reworked Budget Billing logic - consolodated opens to add new indexes to eventually replace next transaction address logic, replaced in some key programs, but not all 
 12:47 10/22/2022	CO	5.75254   
