changes for edison to use master meter -

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1074,7 +1074,7 @@ for transactions removed - found if used to delete a charge and then a bill is r
 16:08 07/17/2017	CO	5.73003                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
 4:07 PM 7/10/2017	PR	Illinois Income Tax increaded from 3.75 to 4.95 percent.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             
 9:11 07/17/2017	CO	5.73002                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
-9:10 AM 7/10/2017	U4	Client 911 gets Master Meter hand held import format changes                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
+9:10 AM 7/10/2017	U4	Client 911 gets ',RecL=512,replace' hand held import format changes                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
 15:55 07/17/2017	CO	5.73001                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
 12:16 07/17/2017	CO	5.72236                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 
 17:47 07/17/2017	CO	5.72235                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
@@ -1091,7 +1091,7 @@ for transactions removed - found if used to delete a charge and then a bill is r
 3:30 PM 6/22/2017	CO	completed conversion from INI files to System Registry for storing program's print properties.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
 15:10 06/17/2017	CO	Fixed bug where some folders were not automatically being created in the report cache                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
 14:27 06/17/2017	CO	5.72219                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
-11:45 AM 6/12/2017	U4	Master Meter Format enhanced                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+11:45 AM 6/12/2017	U4	',RecL=512,replace' Format enhanced                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
 11:45 AM 6/12/2017	CO	CSZ parsing improved to handle double spaces randomly inserted into text                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
 11:45 AM 6/12/2017	CO	ScreenIO and FileIO upgrade                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
 10:56 AM 6/9/2017	CO	BR upgraded to 4.32g                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
