Labels - fixed bug causing first label selected not to function as intended

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                               1:12 PM 6/15/2022	PR	2022 1099 misc and nec pdfs and changes                                                                       
+12:06 PM 12/6/2022	CO	Labels - fixed bug causing first label selected not to function as intended
 10:26 11/22/2022	CO	5.75268  
 10:25 AM 11/30/2022	PR	fixed bug when canceling the addition of a new employee 
 10:02 11/22/2022	CO	5.75267   
