MO 2023 withholding tables implemented

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description        
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________        
+10:41 AM 1/30/2023	PR	Withholding Tables for MO updated
 15:14 01/23/2023	CO	5.75287  
 3:10 PM 1/25/2023	PR	Withholding Tables for AR updated 
 14:31 01/23/2023	CO	5.75286   
