--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                 
 _________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                 
+2:58 PM 3/15/2023	PR	Withholding Tables for OR updated
 12:45 02/23/2023	CO	5.75296  
 12:43 PM 2/27/2023	PR	IL whitholding tables updated 
 14:33 02/23/2023	CO	5.75295   
