--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,6 +1,7 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                    
 _________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                    
- 9:21 03/23/2023	CO	5.75299  
+12:57 03/23/2023	CO	5.75299  
+12:56 PM 3/30/2023	UB	Fix for Past Due Notices and Print Bills when using bulksort=3 
 13:45 03/23/2023	CO	5.75298   
 1:43 PM 3/24/2023	UB	Fix to auto import skipped acounts printout  
 15:02 03/23/2023	CO	5.75297    
