--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                            
 _________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                        
+11:11 AM 1/4/2024	PR	YTD Deduction Register no longer prints all 0 lines
 20:48 12/23/2023	CO	5.75326  
 10:08 12/23/2023	CO	5.75325   
 9:29 12/23/2023	CO	5.75324    
