renamed menu.mnu to .mnu in all systems.  Menu.br.brs now supports both fixed some core data names not to include cno.  that's most of it

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,7 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                       
 _________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                   
+4:25 PM 2/18/2024	CO	W-2 export improved
+9:26 PM 2/16/2024	CO	Index statuses reduced
 21:09 02/24/2024	CO	5.75354  
 10:57 02/24/2024	CO	5.75353   
 11:45 01/24/2024	CO	5.75352    
