--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                           
 _________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                       
+7:57 PM 3/2/2024	CO	W-2 Electronic Submission CSV file now in Print W-2 Forms program, all known errors resolved
  9:58 02/24/2024	CO	5.75358  
 11:25 02/24/2024	CO	5.75357   
 9:21 02/24/2024	CO	5.75356    
